--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,6 @@ dependencies {
     compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: '3.8.1'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.8.1'
     testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
+    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.0'
+
 }
